<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="eu.epitech.todolist.Fragment.ViewFragment">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:id="@+id/image"
                   android:layout_marginTop="15dp"
                   android:src="@drawable/alarm"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentTop="true"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="70dp"
                  android:textStyle="bold"
                  android:id="@+id/text_title"
                  android:layout_marginStart="15dp"
                  android:textColorHint="@color/colorAccent"
                  android:hint="@string/task"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/title"
                  android:lines="1"
                  android:scrollHorizontally="true"
                  android:ellipsize="end"
                  android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp"
                  android:textSize="25dp"
                  android:hint="@string/task_name"
                  android:layout_below="@id/text_title"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="15dp"
                  android:textStyle="bold"
                  android:textColorHint="@color/colorAccent"
                  android:id="@+id/text_description"
                  android:layout_marginStart="15dp"
                  android:textColor="@color/colorAccent"
                  android:layout_below="@id/title"
                  android:hint="@string/description"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/description"
                  android:textColorHint="@color/gray"
                  android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp"
                  android:hint="@string/description"
                  android:lines="2"
                  android:scrollHorizontally="true"
                  android:ellipsize="end"
                  android:textSize="25dp"
                  android:layout_below="@id/text_description"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:id="@+id/text_date"
                  android:layout_marginTop="15dp"
                  android:layout_marginEnd="15dp"
                  android:layout_marginStart="15dp"
                  android:textColor="@color/colorAccent"
                  android:text="@string/date"
                  android:layout_below="@id/description"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp"
                  android:hint="@string/day"
                  android:textSize="25dp"
                  android:focusable="false"
                  android:id="@+id/day"
                  android:layout_below="@id/text_date"
                  android:layout_marginBottom="5dp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp"
                  android:layout_below="@id/day"
                  android:focusable="false"
                  android:textSize="25dp"
                  android:id="@+id/time"
                  android:hint="@string/time"
        />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:id="@+id/category"
                  android:text="@string/category"
                  android:layout_marginEnd="15dp"
                  android:layout_marginStart="15dp"
                  android:layout_below="@+id/time"
                  android:textColor="@color/colorAccent"
                  android:layout_alignParentStart="true"
                  android:layout_marginTop="15dp"/>
        <TextView android:layout_width="match_parent"
                  android:layout_below="@id/category"
                  android:textSize="25dp"
                  android:hint="@string/category"
                  android:id="@+id/spinner_category"
                  android:layout_marginEnd="15dp"
                  android:layout_marginStart="15dp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:id="@+id/status"
                  android:text="@string/status"
                  android:layout_marginEnd="15dp"
                  android:layout_marginStart="15dp"
                  android:layout_below="@id/spinner_category"
                  android:textColor="@color/colorAccent"
                  android:layout_alignParentStart="true"
                  android:layout_marginTop="24dp"/>
        <TextView android:layout_width="match_parent"
                  android:layout_below="@id/status"
                  android:id="@+id/spinner_status"
                  android:textSize="25dp"
                  android:hint="@string/status"
                  android:hapticFeedbackEnabled="true"
                  android:layout_marginEnd="15dp"
                  android:layout_marginStart="15dp"
                  android:layout_height="wrap_content"/>
        <Button android:layout_width="match_parent"
                android:id="@+id/edit"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:layout_below="@id/spinner_status"
                android:onClick="loadEditFrag"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"/>
    </RelativeLayout>
</FrameLayout>
