<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="eu.epitech.todolist.Fragment.EditTaskFragment">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView android:layout_width="50dp"
               android:layout_height="50dp"
               android:layout_marginTop="15dp"
               android:src="@drawable/alarm"
               android:id="@+id/image"
               android:layout_centerHorizontal="true"
               android:layout_alignParentTop="true"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="70dp"
              android:textStyle="bold"
              android:id="@+id/text_title"
              android:layout_marginStart="20dp"
              android:textColorHint="@color/colorAccent"
              android:hint="@string/task"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:textColorLink="@color/gray"
              android:textColorHint="@color/gray"
              android:inputType="text"
              android:maxLines="1"
              android:hint="@string/task_name"
              android:layout_below="@id/text_title"
    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:textStyle="bold"
              android:textColorHint="@color/colorAccent"
              android:id="@+id/text_description"
              android:layout_marginStart="20dp"
              android:textColor="@color/colorAccent"
              android:layout_below="@id/title"
              android:hint="@string/description"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="1"
              android:id="@+id/description"
              android:textColorHint="@color/gray"
              android:inputType="text"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:hint="@string/description"
              android:textColorHighlight="@color/gray"
              android:layout_below="@id/text_description"
    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:id="@+id/text_date"
              android:layout_marginTop="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginStart="15dp"
              android:textColor="@color/colorAccent"
              android:text="@string/date"
              android:layout_below="@id/description"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColorLink="@color/gray"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:hint="@string/day"
              android:focusable="false"
              android:textColorHint="@color/gray"
              android:id="@+id/day"
              android:layout_below="@id/text_date"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:layout_below="@id/day"
              android:textColorLink="@color/gray"
              android:focusable="false"
              android:id="@+id/time"
              android:textColorHint="@color/gray"
              android:textColor="@color/colorAccent"
              android:hint="Time"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:id="@+id/category"
              android:text="Category"
              android:layout_marginEnd="15dp"
              android:layout_marginStart="15dp"
              android:layout_below="@+id/time"
              android:textColor="@color/colorAccent"
              android:layout_alignParentStart="true"
              android:layout_marginTop="15dp"/>
    <Spinner android:layout_width="match_parent"
             android:layout_below="@id/category"
             android:id="@+id/spinner_category"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:id="@+id/status"
              android:text="@string/status"
              android:layout_marginEnd="15dp"
              android:layout_marginStart="15dp"
              android:layout_below="@id/spinner_category"
              android:textColor="@color/colorAccent"
              android:layout_alignParentStart="true"
              android:layout_marginTop="24dp"/>
    <Spinner android:layout_width="match_parent"
             android:layout_below="@id/status"
             android:id="@+id/spinner_status"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:layout_height="wrap_content"/>
    <Button android:layout_width="150dp"
            android:id="@+id/valider"
            android:text="@string/edit"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textStyle="bold"
            android:layout_below="@id/spinner_status"
            android:layout_marginStart="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"/>
    <Button android:layout_width="150dp"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:background="@color/red"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_below="@id/spinner_status"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</FrameLayout>
