<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:background="?android:selectableItemBackground"
              android:weightSum="1"
              android:layout_margin="2dp"
              android:layout_height="wrap_content">
    <ImageView android:layout_width="0dp"
               android:id="@+id/category"
               android:src="@drawable/home"
               android:layout_gravity="center"
               android:layout_weight="0.2"
               android:layout_marginEnd="10dp"
               android:layout_height="match_parent"/>
        <LinearLayout android:layout_width="0dp"
                      android:orientation="vertical"
                      android:layout_weight="0.45"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/Name"
                      android:textSize="24dp"
                      android:lines="1"
                      android:scrollHorizontally="true"
                      android:ellipsize="end"
                      android:hint="@string/task_name"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/Description"
                      android:text="@string/description"
                      android:lines="1"
                      android:scrollHorizontally="true"
                      android:ellipsize="end"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/Date"
                      android:text="@string/example_date"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/Time"
                      android:text="@string/timeText"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

    <Spinner android:layout_width="0dp"
             android:layout_weight="0.35"
             android:background="@drawable/round_button"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
             android:id="@+id/doneButton"
             android:textAlignment="center"
             android:layout_height="50dp">
    </Spinner>
</LinearLayout>
</android.support.v7.widget.CardView>

<!--  <ImageButton android:layout_width="0dp"
                 android:layout_weight="0.2"
                 android:id="@+id/doneButton"
                 android:onClick="deleteTask"
                 android:layout_gravity="center"
                 android:background="?android:selectableItemBackground"
                 android:src="@drawable/ic_done_green_24dp"
                 android:layout_height="match_parent"/> -->
